# mindstream-podcast-saas

./: .env  .gitignore  Dockerfile  GAP-AUDIT.md  IDEO-AUDIT.md  MASTER-ARCHITECTURE.md  PLAYWRIGHT-REPORT.md  PRD.md  Procfile  fly.toml  pyproject.toml  railway.json  replit.md  saas_podcast.db  vercel.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_webhooks.py  003_grow_layer.py
podcast/: .env  .env.example  README.md  audio_generator.py  config.py  episode_store.py  generate_podcast.py  news_fetcher.py  podcast_episodes.db  publisher.py  requirements.txt  run_daily.sh  script_writer.py  server.py  settings.json  settings.py  sfx_generator.py  social_fetcher.py  start_server.sh  story_memory.py  story_memory_postgres.py  voice_providers.py
podcast/archive/2026-03-08/: 2026-03-08_description.txt  2026-03-08_script.json  2026-03-08_transcript.txt
podcast/archive/2026-03-09/: 2026-03-09_description.txt  2026-03-09_script.json  2026-03-09_transcript.txt
podcast/archive/2026-03-10/: 2026-03-10_description.txt  2026-03-10_script.json  (+1 more)
products/braincast/: index.html
products/castapi/: index.html
products/podcastforge/: index.html
products/scriptflow/: index.html
products/voicememo/: index.html
saas/: app.py  requirements.txt  test_saas.py
saas/api/: grow.py  main.py  mcp.py  memo.py  webhooks.py
saas/auth/: .jwt_secret  auth.py
saas/dashboard/: castapi.py  landing.py  templates.py
saas/db/: __init__.py  models.py
saas/jobs/: runner.py
saas/memo/: processor.py  rss.py
tests/: login.spec.ts
(+6 files in other folders)
