[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.2",
    "elevenlabs>=2.38.1",
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "itsdangerous>=2.2.0",
    "lxml>=6.0.2",
    "openai>=2.28.0",
    "psycopg2-binary>=2.9.11",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
